--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </div>
     </div>
     
-    <script src="./Main.js"></script>
+    <script type="module" src="./src/Main.js"></script>
+    <script type="module" src="./src/Board.js"></script>
+    <script type="module" src="./src/Piece.js"></script>
 </body>
 </html>
