--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </svg>
         </div>
     </div>
+
+    <button id="test">test</button>
     
     <script type="module" src="./src/Main.js"></script>
     <script type="module" src="./src/Board.js"></script>
